<resources>
    <string name="app_name">AppLoker</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <string name="image_splashscreen">Image_Splashscreen</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="web_developer">Web Developer</string>
    <string name="kategori">Kategori</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="aploker">APLOKER</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="belum_punya">Belum punya akun?</string>
    <string name="teks_masuk">Masuk</string>
    <string name="teks_daftar">Daftar</string>
    <string name="buat_akun">BUAT AKUN</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="btn_kembali">Kembali</string>
    <string name="btn_buat">Buat</string>
    <string name="btn_masuk">Masuk</string>
    <!-- Strings related to profile -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="simpan">Simpan</string>
    <string name="foto_perusahaan">Foto Perusahaan</string>
    <string name="list_pekerjaan">List Pekerjaan</string>
    <string-array name="jenis_kelamin">
        <item>Laki - laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="teks_hasil_pencarian">Hasil Pencarian</string>
    <string name="tune">tune</string>
    <string name="daflok">Daftar Lowongan</string>
    <string name="app_developer">Mobile Developer</string>
    <string name="succes_play">Sukses</string>
    <string name="selesai">Selesai</string>
    <string name="upload_file">Upload File</string>
    <string name="teks_cv">CV</string>
    <string name="btn_ajukan">Apply</string>

</resources>