<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="218dp"
        android:layout_height="94dp">

        <ImageView
            android:id="@+id/ivWeb"
            android:src="@drawable/web"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="18dp">
        </ImageView>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/web_developer" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="218dp"
        android:layout_height="94dp">

        <ImageView
            android:id="@+id/ivMobile"
            android:src="@drawable/web"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="18dp">
        </ImageView>

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/app_developer" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="218dp"
        android:layout_height="94dp">

        <ImageView
            android:id="@+id/ivUiux"
            android:src="@drawable/web"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="18dp">
        </ImageView>

        <TextView
            android:id="@+id/tvUiux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/ui_ux_designer" />


    </androidx.cardview.widget.CardView>
    


</LinearLayout>