<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="333dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/roundedcourner"
        android:queryHint="Search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/kategori"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_button_mobile"
        app:layout_constraintStart_toStartOf="@+id/image_button_mobile"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <ImageButton
        android:id="@+id/image_button_mobile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_category"
        android:contentDescription="@string/mobile_developer"
        android:src="@drawable/bg_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:text="@string/mobile_developer"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_mobile"
        app:layout_constraintStart_toStartOf="@+id/image_button_mobile"
        app:layout_constraintTop_toTopOf="@+id/image_button_mobile" />

    <ImageButton
        android:id="@+id/image_button_ux"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_category2"
        android:contentDescription="@string/ui_ux_designer"
        android:src="@drawable/bg_item"
        app:layout_constraintEnd_toEndOf="@+id/image_button_mobile"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/image_button_mobile"
        app:layout_constraintTop_toBottomOf="@+id/image_button_mobile" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_ux_designer"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_ux"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/image_button_ux" />

    <ImageButton
        android:id="@+id/image_button_webDev"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_category3"
        android:contentDescription="@string/web_developer"
        android:src="@drawable/bg_item"
        app:layout_constraintEnd_toEndOf="@+id/image_button_mobile"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="@+id/image_button_mobile"
        app:layout_constraintTop_toBottomOf="@+id/image_button_ux" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_developer"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_webDev"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/image_button_webDev" />
</androidx.constraintlayout.widget.ConstraintLayout>